src/parser.c
/* This generated file is licenced and copyrighted under the same 
 * conditions as the sourcefile. Happy debugging:) */

/*
    defines:
*/

#define HOLD        unsigned hold___BNF_level = __BNF_level; char *hold___BNF_input = __BNF_input, *hold___BNF_output = __BNF_output
#define RESTORE     {__BNF_level = hold___BNF_level; __BNF_input = hold___BNF_input; __BNF_output = hold___BNF_output;}

#ifdef __TURBOC__
# pragma warn -pro
# pragma warn -nod
#endif

#ifdef _MSC_VER
# pragma warning (disable:4013)
# pragma warning (disable:4005)
#endif

/*
    externals:
*/

extern char *__BNF_input, *__BNF_output;
extern unsigned __BNF_level;
extern unsigned int __BNF_tabsize;

extern int __BNF_trans_string(char *),
    __BNF_input_string(char *), __BNF_output_string(char *),
    __BNF_trans_char(void), __BNF_swap(char *, char *, char *);


extern void user_error(char *); /* user provided error handler must TERMINATE */



int w_(void)
{
	int state;

	{
		int firstloop = 1;
		do {
			state = __BNF_trans_string( " "  ); /* --- Call function --- */
			if (firstloop)
			{
				if (state) break;
				firstloop = 0;
			}
		} while ( !state );
		state = firstloop;
	}
	state = 0;
	return state;}


int _w(void)
{
	int state;

	{
		int firstloop = 1;
		do {
			state = __BNF_input_string( " "  ); /* --- Call function --- */
			if (firstloop)
			{
				if (state) break;
				firstloop = 0;
			}
		} while ( !state );
		state = firstloop;
	}
	state = 0;
	return state;}


int ynanswer(void)
{
	int state;

	do {
		do {
			HOLD;

			do {
				do {
					HOLD;

					state = __BNF_input_string( "yes"  ); /* --- Call function --- */
					if (state) break;
					do {
						HOLD;

						state = w_( ); /* --- Call function --- */
						if (state) break;
						state = __BNF_input_string( "please"  ); /* --- Call function --- */
						if (state) { RESTORE; break; };
					} while( 0 );

					state = 0;
					if (state) { RESTORE; break; };
				} while( 0 );

				if (!state) break;
				state = __BNF_input_string( "yeah"  ); /* --- Call function --- */
				if (!state) break;
				state = __BNF_input_string( "okay"  ); /* --- Call function --- */
			} while( 0 );

			if (state) break;
			state = __BNF_output_string( "yes"  ); /* --- Call function --- */
			if (state) { RESTORE; break; };
		} while( 0 );

		if (!state) break;
		do {
			HOLD;

			do {
				do {
					HOLD;

					state = __BNF_input_string( "no"  ); /* --- Call function --- */
					if (state) break;
					do {
						HOLD;

						state = w_( ); /* --- Call function --- */
						if (state) break;
						state = __BNF_input_string( "thank"  ); /* --- Call function --- */
						if (state) { RESTORE; break; };
						state = w_( ); /* --- Call function --- */
						if (state) { RESTORE; break; };
						state = __BNF_input_string( "you"  ); /* --- Call function --- */
						if (state) { RESTORE; break; };
					} while( 0 );

					state = 0;
					if (state) { RESTORE; break; };
				} while( 0 );

				if (!state) break;
				state = __BNF_input_string( "nope"  ); /* --- Call function --- */
			} while( 0 );

			if (state) break;
			state = __BNF_output_string( "no"  ); /* --- Call function --- */
			if (state) { RESTORE; break; };
		} while( 0 );

	} while( 0 );

	return state;}


int weapon(void)
{
	int state;

	do {
		state = __BNF_trans_string( "axe"  ); /* --- Call function --- */
		if (!state) break;
		state = __BNF_trans_string( "wand"  ); /* --- Call function --- */
		if (!state) break;
		state = __BNF_trans_string( "rod"  ); /* --- Call function --- */
	} while( 0 );

	return state;}


int article(void)
{
	int state;

	state = __BNF_input_string( "the"  ); /* --- Call function --- */
	return state;}


int lamp_item(void)
{
	int state;

	do {
		state = __BNF_trans_string( "lamp"  ); /* --- Call function --- */
		if (!state) break;
		state = __BNF_trans_string( "lantern"  ); /* --- Call function --- */
		if (!state) break;
		state = __BNF_trans_string( "light"  ); /* --- Call function --- */
		if (!state) break;
		state = __BNF_trans_string( "headlight"  ); /* --- Call function --- */
		if (!state) break;
		do {
			HOLD;

			state = __BNF_trans_string( "head"  ); /* --- Call function --- */
			if (state) break;
			state = _w( ); /* --- Call function --- */
			if (state) { RESTORE; break; };
			state = __BNF_trans_string( "lamp"  ); /* --- Call function --- */
			if (state) { RESTORE; break; };
		} while( 0 );

	} while( 0 );

	return state;}


int item(void)
{
	int state;

	do {
		state = weapon( ); /* --- Call function --- */
		if (!state) break;
		state = lamp_item( ); /* --- Call function --- */
		if (!state) break;
		state = __BNF_trans_string( "battery"  ); /* --- Call function --- */
		if (!state) break;
		state = __BNF_trans_string( "carpet"  ); /* --- Call function --- */
		if (!state) break;
		state = __BNF_trans_string( "barrel"  ); /* --- Call function --- */
		if (!state) break;
		state = __BNF_trans_string( "gold"  ); /* --- Call function --- */
		if (!state) break;
		do {
			HOLD;

			do {
				HOLD;

				state = __BNF_input_string( "gold"  ); /* --- Call function --- */
				if (state) break;
				state = w_( ); /* --- Call function --- */
				if (state) { RESTORE; break; };
			} while( 0 );

			state = 0;
			if (state) break;
			state = __BNF_trans_string( "nugget"  ); /* --- Call function --- */
			if (state) { RESTORE; break; };
		} while( 0 );

		if (!state) break;
		state = __BNF_trans_string( "diamond"  ); /* --- Call function --- */
		if (!state) break;
		do {
			HOLD;

			do {
				HOLD;

				state = __BNF_input_string( "silver"  ); /* --- Call function --- */
				if (state) break;
				state = w_( ); /* --- Call function --- */
				if (state) { RESTORE; break; };
			} while( 0 );

			state = 0;
			if (state) break;
			state = __BNF_trans_string( "bars"  ); /* --- Call function --- */
			if (state) { RESTORE; break; };
		} while( 0 );

		if (!state) break;
		state = __BNF_trans_string( "silver"  ); /* --- Call function --- */
		if (!state) break;
		state = __BNF_trans_string( "jewel"  ); /* --- Call function --- */
		if (!state) break;
		state = __BNF_trans_string( "coins"  ); /* --- Call function --- */
		if (!state) break;
		state = __BNF_trans_string( "chest"  ); /* --- Call function --- */
		if (!state) break;
		state = __BNF_trans_string( "box"  ); /* --- Call function --- */
		if (!state) break;
		state = __BNF_trans_string( "treasure"  ); /* --- Call function --- */
		if (!state) break;
		state = __BNF_trans_string( "eggs"  ); /* --- Call function --- */
		if (!state) break;
		state = __BNF_trans_string( "egg"  ); /* --- Call function --- */
		if (!state) break;
		state = __BNF_trans_string( "nest"  ); /* --- Call function --- */
		if (!state) break;
		state = __BNF_trans_string( "trident"  ); /* --- Call function --- */
		if (!state) break;
		do {
			HOLD;

			do {
				HOLD;

				state = __BNF_input_string( "ming"  ); /* --- Call function --- */
				if (state) break;
				state = w_( ); /* --- Call function --- */
				if (state) { RESTORE; break; };
			} while( 0 );

			state = 0;
			if (state) break;
			state = __BNF_trans_string( "vase"  ); /* --- Call function --- */
			if (state) { RESTORE; break; };
		} while( 0 );

		if (!state) break;
		do {
			HOLD;

			state = __BNF_trans_string( "shards"  ); /* --- Call function --- */
			if (state) break;
			do {
				HOLD;

				state = w_( ); /* --- Call function --- */
				if (state) break;
				state = __BNF_input_string( "of"  ); /* --- Call function --- */
				if (state) { RESTORE; break; };
				state = w_( ); /* --- Call function --- */
				if (state) { RESTORE; break; };
				state = __BNF_input_string( "pottery"  ); /* --- Call function --- */
				if (state) { RESTORE; break; };
			} while( 0 );

			state = 0;
			if (state) { RESTORE; break; };
		} while( 0 );

		if (!state) break;
		state = __BNF_trans_string( "pottery"  ); /* --- Call function --- */
		if (!state) break;
		state = __BNF_trans_string( "emerald"  ); /* --- Call function --- */
		if (!state) break;
		state = __BNF_trans_string( "platinum"  ); /* --- Call function --- */
		if (!state) break;
		state = __BNF_trans_string( "pyramid"  ); /* --- Call function --- */
		if (!state) break;
		do {
			HOLD;

			state = __BNF_trans_string( "platinum"  ); /* --- Call function --- */
			if (state) break;
			state = w_( ); /* --- Call function --- */
			if (state) { RESTORE; break; };
			state = __BNF_input_string( "pyramid"  ); /* --- Call function --- */
			if (state) { RESTORE; break; };
		} while( 0 );

		if (!state) break;
		state = __BNF_trans_string( "pearl"  ); /* --- Call function --- */
		if (!state) break;
		do {
			HOLD;

			do {
				HOLD;

				state = __BNF_input_string( "persian"  ); /* --- Call function --- */
				if (state) break;
				state = w_( ); /* --- Call function --- */
				if (state) { RESTORE; break; };
			} while( 0 );

			state = 0;
			if (state) break;
			state = __BNF_trans_string( "rug"  ); /* --- Call function --- */
			if (state) { RESTORE; break; };
		} while( 0 );

		if (!state) break;
		state = __BNF_trans_string( "spice"  ); /* --- Call function --- */
		if (!state) break;
		state = __BNF_trans_string( "chain"  ); /* --- Call function --- */
		if (!state) break;
		do {
			HOLD;

			state = __BNF_trans_string( "vending"  ); /* --- Call function --- */
			if (state) break;
			state = _w( ); /* --- Call function --- */
			if (state) { RESTORE; break; };
			state = __BNF_input_string( "machine"  ); /* --- Call function --- */
			if (state) { RESTORE; break; };
		} while( 0 );

		if (!state) break;
		state = __BNF_trans_string( "knife"  ); /* --- Call function --- */
		if (!state) break;
		state = __BNF_trans_string( "knives"  ); /* --- Call function --- */
		if (!state) break;
		state = __BNF_trans_string( "food"  ); /* --- Call function --- */
		if (!state) break;
		state = __BNF_trans_string( "rations"  ); /* --- Call function --- */
		if (!state) break;
		state = __BNF_trans_string( "bottle"  ); /* --- Call function --- */
		if (!state) break;
		state = __BNF_trans_string( "jar"  ); /* --- Call function --- */
		if (!state) break;
		state = __BNF_trans_string( "water"  ); /* --- Call function --- */
		if (!state) break;
		state = __BNF_trans_string( "oil"  ); /* --- Call function --- */
		if (!state) break;
		state = __BNF_trans_string( "debris"  ); /* --- Call function --- */
		if (!state) break;
		state = __BNF_trans_string( "shell"  ); /* --- Call function --- */
		if (!state) break;
		state = __BNF_trans_string( "keys"  ); /* --- Call function --- */
		if (!state) break;
		state = __BNF_trans_string( "key"  ); /* --- Call function --- */
		if (!state) break;
		state = __BNF_trans_string( "grate"  ); /* --- Call function --- */
		if (!state) break;
		state = __BNF_trans_string( "cage"  ); /* --- Call function --- */
		if (!state) break;
		state = __BNF_trans_string( "pillow"  ); /* --- Call function --- */
		if (!state) break;
		state = __BNF_trans_string( "velvet"  ); /* --- Call function --- */
		if (!state) break;
		state = __BNF_trans_string( "tablet"  ); /* --- Call function --- */
		if (!state) break;
		state = __BNF_trans_string( "magazine"  ); /* --- Call function --- */
		if (!state) break;
		state = __BNF_trans_string( "issue"  ); /* --- Call function --- */
		if (!state) break;
		state = __BNF_trans_string( "mirror"  ); /* --- Call function --- */
		if (!state) break;
		state = __BNF_trans_string( "mist"  ); /* --- Call function --- */
		if (!state) break;
		state = __BNF_trans_string( "lock"  ); /* --- Call function --- */
		if (!state) break;
		state = __BNF_trans_string( "nothing"  ); /* --- Call function --- */
		if (!state) break;
		state = __BNF_trans_string( "oyster"  ); /* --- Call function --- */
		if (!state) break;
		state = __BNF_trans_string( "clam"  ); /* --- Call function --- */
	} while( 0 );

	return state;}


int organism(void)
{
	int state;

	do {
		state = __BNF_trans_string( "troll"  ); /* --- Call function --- */
		if (!state) break;
		state = __BNF_trans_string( "bear"  ); /* --- Call function --- */
		if (!state) break;
		state = __BNF_trans_string( "dragon"  ); /* --- Call function --- */
		if (!state) break;
		state = __BNF_trans_string( "bird"  ); /* --- Call function --- */
		if (!state) break;
		state = __BNF_trans_string( "pirate"  ); /* --- Call function --- */
		if (!state) break;
		state = __BNF_trans_string( "dwarf"  ); /* --- Call function --- */
		if (!state) break;
		state = __BNF_trans_string( "dwarves"  ); /* --- Call function --- */
		if (!state) break;
		state = __BNF_trans_string( "snake"  ); /* --- Call function --- */
		if (!state) break;
		state = __BNF_trans_string( "clam"  ); /* --- Call function --- */
		if (!state) break;
		state = __BNF_trans_string( "oyster"  ); /* --- Call function --- */
		if (!state) break;
		state = __BNF_trans_string( "plant"  ); /* --- Call function --- */
		if (!state) break;
		state = __BNF_trans_string( "giant"  ); /* --- Call function --- */
		if (!state) break;
		state = __BNF_trans_string( "shadow"  ); /* --- Call function --- */
		if (!state) break;
		state = __BNF_trans_string( "figure"  ); /* --- Call function --- */
	} while( 0 );

	return state;}


int voice_verb(void)
{
	int state;

	do {
		state = __BNF_trans_string( "say"  ); /* --- Call function --- */
		if (!state) break;
		state = __BNF_trans_string( "chant"  ); /* --- Call function --- */
		if (!state) break;
		state = __BNF_trans_string( "sing"  ); /* --- Call function --- */
		if (!state) break;
		state = __BNF_trans_string( "utter"  ); /* --- Call function --- */
		if (!state) break;
		state = __BNF_trans_string( "mumble"  ); /* --- Call function --- */
	} while( 0 );

	return state;}


int location(void)
{
	int state;

	do {
		state = __BNF_trans_string( "depression"  ); /* --- Call function --- */
		if (!state) break;
		state = __BNF_trans_string( "road"  ); /* --- Call function --- */
		if (!state) break;
		state = __BNF_trans_string( "hill"  ); /* --- Call function --- */
		if (!state) break;
		state = __BNF_trans_string( "forest"  ); /* --- Call function --- */
		if (!state) break;
		state = __BNF_trans_string( "valley"  ); /* --- Call function --- */
		if (!state) break;
		state = __BNF_trans_string( "gully"  ); /* --- Call function --- */
		if (!state) break;
		state = __BNF_trans_string( "stream"  ); /* --- Call function --- */
		if (!state) break;
		state = __BNF_trans_string( "passage"  ); /* --- Call function --- */
		if (!state) break;
		state = __BNF_trans_string( "tunnel"  ); /* --- Call function --- */
		if (!state) break;
		state = __BNF_trans_string( "chasm"  ); /* --- Call function --- */
		if (!state) break;
		state = __BNF_trans_string( "fissure"  ); /* --- Call function --- */
		if (!state) break;
		state = __BNF_trans_string( "pit"  ); /* --- Call function --- */
		if (!state) break;
		state = __BNF_trans_string( "outdoor"  ); /* --- Call function --- */
		if (!state) break;
		state = __BNF_trans_string( "outdoors"  ); /* --- Call function --- */
		if (!state) break;
		state = __BNF_trans_string( "crack"  ); /* --- Call function --- */
		if (!state) break;
		state = __BNF_trans_string( "cave"  ); /* --- Call function --- */
		if (!state) break;
		state = __BNF_trans_string( "entrance"  ); /* --- Call function --- */
		if (!state) break;
		state = __BNF_trans_string( "slit"  ); /* --- Call function --- */
		if (!state) break;
		state = __BNF_trans_string( "slab"  ); /* --- Call function --- */
		if (!state) break;
		state = __BNF_trans_string( "tree"  ); /* --- Call function --- */
		if (!state) break;
		state = __BNF_trans_string( "trees"  ); /* --- Call function --- */
		if (!state) break;
		do {
			HOLD;

			state = __BNF_trans_string( "bed"  ); /* --- Call function --- */
			if (state) break;
			state = _w( ); /* --- Call function --- */
			if (state) { RESTORE; break; };
			state = __BNF_trans_string( "quilt"  ); /* --- Call function --- */
			if (state) { RESTORE; break; };
		} while( 0 );

		if (!state) break;
		state = __BNF_trans_string( "office"  ); /* --- Call function --- */
		if (!state) break;
		state = __BNF_trans_string( "cavern"  ); /* --- Call function --- */
		if (!state) break;
		state = __BNF_trans_string( "floor"  ); /* --- Call function --- */
		if (!state) break;
		state = __BNF_trans_string( "house"  ); /* --- Call function --- */
		if (!state) break;
		state = __BNF_trans_string( "dome"  ); /* --- Call function --- */
		if (!state) break;
		state = __BNF_trans_string( "hall"  ); /* --- Call function --- */
		if (!state) break;
		state = __BNF_trans_string( "view"  ); /* --- Call function --- */
		if (!state) break;
		state = __BNF_trans_string( "staircase"  ); /* --- Call function --- */
		if (!state) break;
		state = __BNF_trans_string( "stairs"  ); /* --- Call function --- */
		if (!state) break;
		state = __BNF_trans_string( "steps"  ); /* --- Call function --- */
		if (!state) break;
		do {
			HOLD;

			state = __BNF_trans_string( "oriental"  ); /* --- Call function --- */
			if (state) break;
			state = _w( ); /* --- Call function --- */
			if (state) { RESTORE; break; };
			state = __BNF_input_string( "room"  ); /* --- Call function --- */
			if (state) { RESTORE; break; };
		} while( 0 );

		if (!state) break;
		state = __BNF_trans_string( "reservoir"  ); /* --- Call function --- */
		if (!state) break;
		state = __BNF_trans_string( "volcano"  ); /* --- Call function --- */
		if (!state) break;
		state = __BNF_trans_string( "geyser"  ); /* --- Call function --- */
		if (!state) break;
		state = __BNF_trans_string( "hole"  ); /* --- Call function --- */
		if (!state) break;
		state = __BNF_trans_string( "wall"  ); /* --- Call function --- */
		if (!state) break;
		state = __BNF_trans_string( "message"  ); /* --- Call function --- */
		if (!state) break;
		do {
			HOLD;

			state = __BNF_trans_string( "low"  ); /* --- Call function --- */
			if (state) break;
			state = _w( ); /* --- Call function --- */
			if (state) { RESTORE; break; };
			state = __BNF_input_string( "room"  ); /* --- Call function --- */
			if (state) { RESTORE; break; };
		} while( 0 );

		if (!state) break;
		state = __BNF_trans_string( "building"  ); /* --- Call function --- */
		if (!state) break;
		state = __BNF_trans_string( "drawings"  ); /* --- Call function --- */
		if (!state) break;
		state = __BNF_trans_string( "door"  ); /* --- Call function --- */
		if (!state) break;
		state = __BNF_trans_string( "grate"  ); /* --- Call function --- */
		if (!state) break;
		state = __BNF_trans_string( "fork"  ); /* --- Call function --- */
		if (!state) break;
		state = __BNF_trans_string( "bed"  ); /* --- Call function --- */
		if (!state) break;
		state = __BNF_trans_string( "moss"  ); /* --- Call function --- */
		if (!state) break;
		state = __BNF_trans_string( "carpet"  ); /* --- Call function --- */
		if (!state) break;
		do {
			HOLD;

			do {
				state = __BNF_trans_string( "awkward"  ); /* --- Call function --- */
				if (!state) break;
				state = __BNF_trans_string( "secret"  ); /* --- Call function --- */
			} while( 0 );

			state = 0;
			if (state) break;
			state = w_( ); /* --- Call function --- */
			if (state) { RESTORE; break; };
			state = __BNF_trans_string( "canyon"  ); /* --- Call function --- */
			if (state) { RESTORE; break; };
		} while( 0 );

		if (!state) break;
		do {
			HOLD;

			state = __BNF_trans_string( "broken"  ); /* --- Call function --- */
			state = 0;
			if (state) break;
			state = w_( ); /* --- Call function --- */
			if (state) { RESTORE; break; };
			state = __BNF_trans_string( "rock"  ); /* --- Call function --- */
			if (state) { RESTORE; break; };
		} while( 0 );

		if (!state) break;
		do {
			HOLD;

			state = __BNF_trans_string( "main"  ); /* --- Call function --- */
			if (state) break;
			state = w_( ); /* --- Call function --- */
			if (state) { RESTORE; break; };
			do {
				state = __BNF_trans_string( "corridor"  ); /* --- Call function --- */
				if (!state) break;
				state = __BNF_trans_string( "office"  ); /* --- Call function --- */
			} while( 0 );

			if (state) { RESTORE; break; };
		} while( 0 );

		if (!state) break;
		do {
			HOLD;

			do {
				state = __BNF_trans_string( "debris"  ); /* --- Call function --- */
				if (!state) break;
				state = __BNF_trans_string( "dark"  ); /* --- Call function --- */
			} while( 0 );

			state = 0;
			if (state) break;
			state = w_( ); /* --- Call function --- */
			if (state) { RESTORE; break; };
			state = __BNF_trans_string( "room"  ); /* --- Call function --- */
			if (state) { RESTORE; break; };
		} while( 0 );

		if (!state) break;
		do {
			HOLD;

			state = __BNF_trans_string( "low"  ); /* --- Call function --- */
			if (state) break;
			state = w_( ); /* --- Call function --- */
			if (state) { RESTORE; break; };
			do {
				state = __BNF_trans_string( "window"  ); /* --- Call function --- */
				if (!state) break;
				state = __BNF_trans_string( "passage"  ); /* --- Call function --- */
				if (!state) break;
				state = __BNF_trans_string( "tunnel"  ); /* --- Call function --- */
			} while( 0 );

			if (state) { RESTORE; break; };
		} while( 0 );

	} while( 0 );

	return state;}


int move_action(void)
{
	int state;

	do {
		state = __BNF_trans_string( "enter"  ); /* --- Call function --- */
		if (!state) break;
		state = __BNF_trans_string( "return"  ); /* --- Call function --- */
		if (!state) break;
		state = __BNF_trans_string( "jump"  ); /* --- Call function --- */
		if (!state) break;
		state = __BNF_trans_string( "climb"  ); /* --- Call function --- */
		if (!state) break;
		state = __BNF_trans_string( "retreat"  ); /* --- Call function --- */
		if (!state) break;
		state = __BNF_trans_string( "retread"  ); /* --- Call function --- */
		if (!state) break;
		state = __BNF_trans_string( "continue"  ); /* --- Call function --- */
		if (!state) break;
		state = __BNF_trans_string( "walk"  ); /* --- Call function --- */
		if (!state) break;
		state = __BNF_trans_string( "run"  ); /* --- Call function --- */
		if (!state) break;
		state = __BNF_trans_string( "exit"  ); /* --- Call function --- */
		if (!state) break;
		state = __BNF_trans_string( "leave"  ); /* --- Call function --- */
		if (!state) break;
		state = __BNF_trans_string( "crawl"  ); /* --- Call function --- */
		if (!state) break;
		state = __BNF_trans_string( "ascend"  ); /* --- Call function --- */
		if (!state) break;
		state = __BNF_trans_string( "descend"  ); /* --- Call function --- */
		if (!state) break;
		state = __BNF_trans_string( "cross"  ); /* --- Call function --- */
		if (!state) break;
		state = __BNF_trans_string( "swim"  ); /* --- Call function --- */
	} while( 0 );

	return state;}


int ambiguous_move_action(void)
{
	int state;

	do {
		state = __BNF_trans_string( "travel"  ); /* --- Call function --- */
		if (!state) break;
		state = __BNF_trans_string( "proceed"  ); /* --- Call function --- */
		if (!state) break;
		state = __BNF_trans_string( "go"  ); /* --- Call function --- */
		if (!state) break;
		state = __BNF_trans_string( "explore"  ); /* --- Call function --- */
		if (!state) break;
		state = __BNF_trans_string( "follow"  ); /* --- Call function --- */
		if (!state) break;
		state = __BNF_trans_string( "turn"  ); /* --- Call function --- */
	} while( 0 );

	return state;}


int unambiguous_direction(void)
{
	int state;

	do {
		do {
			HOLD;

			state = __BNF_trans_string( "up"  ); /* --- Call function --- */
			if (state) break;
			state = _w( ); /* --- Call function --- */
			if (state) { RESTORE; break; };
			state = __BNF_trans_string( "stream"  ); /* --- Call function --- */
			if (state) { RESTORE; break; };
		} while( 0 );

		if (!state) break;
		do {
			HOLD;

			state = __BNF_trans_string( "down"  ); /* --- Call function --- */
			if (state) break;
			state = _w( ); /* --- Call function --- */
			if (state) { RESTORE; break; };
			state = __BNF_trans_string( "stream"  ); /* --- Call function --- */
			if (state) { RESTORE; break; };
		} while( 0 );

		if (!state) break;
		state = __BNF_trans_string( "forward"  ); /* --- Call function --- */
		if (!state) break;
		state = __BNF_trans_string( "onward"  ); /* --- Call function --- */
		if (!state) break;
		state = __BNF_trans_string( "back"  ); /* --- Call function --- */
		if (!state) break;
		state = __BNF_trans_string( "outside"  ); /* --- Call function --- */
		if (!state) break;
		state = __BNF_trans_string( "inward"  ); /* --- Call function --- */
		if (!state) break;
		state = __BNF_trans_string( "nowhere"  ); /* --- Call function --- */
		if (!state) break;
		state = __BNF_trans_string( "downward"  ); /* --- Call function --- */
		if (!state) break;
		state = __BNF_trans_string( "left"  ); /* --- Call function --- */
		if (!state) break;
		state = __BNF_trans_string( "right"  ); /* --- Call function --- */
		if (!state) break;
		state = __BNF_trans_string( "upward"  ); /* --- Call function --- */
		if (!state) break;
		state = __BNF_trans_string( "east"  ); /* --- Call function --- */
		if (!state) break;
		state = __BNF_trans_string( "west"  ); /* --- Call function --- */
		if (!state) break;
		state = __BNF_trans_string( "north"  ); /* --- Call function --- */
		if (!state) break;
		state = __BNF_trans_string( "south"  ); /* --- Call function --- */
	} while( 0 );

	return state;}


int explosive_verb(void)
{
	int state;

	do {
		state = __BNF_trans_string( "blast"  ); /* --- Call function --- */
		if (!state) break;
		state = __BNF_trans_string( "detonate"  ); /* --- Call function --- */
		if (!state) break;
		state = __BNF_trans_string( "ignite"  ); /* --- Call function --- */
		if (!state) break;
		do {
			HOLD;

			state = __BNF_trans_string( "blow"  ); /* --- Call function --- */
			if (state) break;
			state = w_( ); /* --- Call function --- */
			if (state) { RESTORE; break; };
			state = __BNF_trans_string( "up"  ); /* --- Call function --- */
			if (state) { RESTORE; break; };
		} while( 0 );

	} while( 0 );

	return state;}


int attack_verb(void)
{
	int state;

	do {
		state = __BNF_trans_string( "attack"  ); /* --- Call function --- */
		if (!state) break;
		state = __BNF_trans_string( "kill"  ); /* --- Call function --- */
		if (!state) break;
		state = __BNF_trans_string( "slay"  ); /* --- Call function --- */
		if (!state) break;
		state = __BNF_trans_string( "fight"  ); /* --- Call function --- */
		if (!state) break;
		state = __BNF_trans_string( "hit"  ); /* --- Call function --- */
		if (!state) break;
		state = __BNF_trans_string( "strike"  ); /* --- Call function --- */
		if (!state) break;
		state = __BNF_trans_string( "smash"  ); /* --- Call function --- */
		if (!state) break;
		state = explosive_verb( ); /* --- Call function --- */
	} while( 0 );

	return state;}


int magic_verb(void)
{
	int state;
